# quickjs-rust

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.cargo/: config.toml
crates/qjs-ast/: Cargo.toml
crates/qjs-ast/src/: class.rs  expression.rs  lib.rs  span.rs  statement.rs
crates/qjs-ast/src/expression/: assignment.rs  literal.rs  member.rs  object.rs  operator.rs
crates/qjs-ast/src/statement/: control.rs  declaration.rs  module.rs  script.rs
crates/qjs-cli/: Cargo.toml
crates/qjs-cli/src/: main.rs
crates/qjs-lexer/: Cargo.toml
crates/qjs-lexer/src/: error.rs  lib.rs  scanner.rs  tests.rs  token.rs
crates/qjs-lexer/src/scanner/: char_class.rs  comments.rs  keywords.rs  literals.rs  punctuators.rs
crates/qjs-parser/: Cargo.toml
crates/qjs-parser/src/: cursor.rs  expression.rs  helpers.rs  lib.rs  statement.rs  tests.rs
crates/qjs-parser/src/expression/: access.rs  assignment.rs  binary.rs  helpers.rs  import.rs  pattern.rs  primary.rs  unary.rs
crates/qjs-parser/src/statement/: classes.rs  control.rs  declarations.rs  functions.rs  mod.rs  module.rs  simple.rs
crates/qjs-parser/src/tests/: async_functions.rs  classes.rs  escaped_identifiers.rs  expressions.rs  generators.rs  literals_and_functions.rs  mod.rs  private_names.rs  statements.rs  using_declarations.rs
crates/qjs-parser/tests/: modules.rs
crates/qjs-runtime/: Cargo.toml
crates/qjs-runtime/benches/: lifecycle.rs
crates/qjs-runtime/benches/fixtures/: medium-v1.js  small-v1.js
crates/qjs-runtime/src/: agent.rs  array.rs  array_buffer.rs  async_function.rs  async_generator.rs  atomics.rs  bigint.rs  boolean.rs  builtins.rs  conversion.rs  data_view.rs  disposable_stack.rs  error.rs  expression.rs  finalization_registry.rs  function.rs  generator.rs  global.rs  html_dda.rs  lib.rs  map.rs  math.rs  native.rs  number.rs  object.rs  operations.rs  private.rs  promise.rs  property.rs  proxy.rs  reflect.rs  regexp.rs  set.rs  statement.rs  string.rs  symbol.rs  test262_host.rs  tests.rs  typed_array.rs  value.rs  (+3 more)
crates/qjs-runtime/src/array/: array_like.rs  constructor.rs  constructor_realm.rs  flatten.rs  indexing.rs  install.rs  is_array.rs  iteration.rs  iterator.rs  join.rs  mutation.rs  search.rs  sequence.rs  shift.rs  sort.rs  species.rs  splice.rs  unshift.rs
crates/qjs-runtime/src/array_buffer/: shared.rs  shared_backing.rs  tests.rs
crates/qjs-runtime/src/atomics/: tests.rs
crates/qjs-runtime/src/bytecode/: compact.rs  compiler.rs  compiler_assign.rs  compiler_binding.rs  compiler_class.rs  compiler_completion.rs  compiler_control.rs  compiler_expr.rs  compiler_function.rs  compiler_hoist.rs  compiler_lexical.rs  compiler_params.rs  compiler_pattern.rs  compiler_strict.rs  compiler_try.rs  compiler_values.rs  ir.rs  ir_names.rs  mod.rs  upvalue_resolver.rs  util.rs  virtual_object.rs  vm.rs  vm_allocation_loop.rs  vm_bindings.rs  vm_call.rs  vm_capture.rs  vm_class.rs  vm_control_loop.rs  vm_dispose.rs  vm_entry.rs  vm_errors.rs  vm_frame.rs  vm_generator.rs  vm_globals.rs  vm_import.rs  vm_iter.rs  vm_iteration_ops.rs  vm_jobs.rs  vm_literals.rs  (+17 more)
crates/qjs-runtime/src/data_view/: tests.rs
crates/qjs-runtime/src/date/: accessors.rs  constructor.rs  format.rs  install.rs  iso.rs  mod.rs  mutation.rs  value.rs
crates/qjs-runtime/src/expression/: assignment.rs  member.rs
crates/qjs-runtime/src/function/: arguments.rs  call.rs  captures.rs  env.rs  install.rs  local_names.rs  native_kind.rs  prototype.rs  strict.rs  upvalue.rs  value.rs
crates/qjs-runtime/src/iterator/: eager.rs  from.rs  helpers.rs  mod.rs  protocol.rs  zip.rs
crates/qjs-runtime/src/json/: install.rs  mod.rs  parser.rs  raw.rs  stringify.rs
crates/qjs-runtime/src/module/: host.rs  link.rs  mod.rs  namespace.rs  records.rs  resolver.rs  tests.rs
crates/qjs-runtime/src/native/: agent.rs  array_buffers.rs  arrays.rs  atomics.rs  core.rs  data_views.rs  date.rs  disposable_stacks.rs  errors.rs  finalization_registries.rs  json.rs  maps.rs  math.rs  numbers.rs  objects.rs  promises.rs  reflect.rs  regexp.rs  sets.rs  strings.rs  typed_arrays.rs  weak_maps.rs  weak_refs.rs  weak_sets.rs
crates/qjs-runtime/src/number/: formatting.rs  install.rs  parsing.rs  prototype.rs  statics.rs
crates/qjs-runtime/src/object/: constructor.rs  descriptor.rs  descriptor_query.rs  descriptor_record.rs  enumeration.rs  from_entries.rs  group_by.rs  install.rs  integrity.rs  prototype.rs
crates/qjs-runtime/src/promise/: all.rs  all_settled.rs  any.rs  capability.rs  jobs.rs  perform.rs  race.rs  try.rs  with_resolvers.rs
crates/qjs-runtime/src/property/: array.rs  function.rs  key.rs  mod.rs  prototype.rs
crates/qjs-runtime/src/reflect/: install.rs  methods.rs  mod.rs  target.rs
crates/qjs-runtime/src/regexp/: escape.rs  formatting.rs  match_all.rs  matcher.rs  symbol_match.rs  symbol_replace.rs  symbol_search.rs  symbol_split.rs  validation.rs
crates/qjs-runtime/src/set/: composition.rs
crates/qjs-runtime/src/statement/: control.rs  declarations.rs
crates/qjs-runtime/src/string/: constructor.rs  indexing.rs  install.rs  iterator.rs  property.rs  prototype.rs
crates/qjs-runtime/src/tests/: arrays.rs  async_functions.rs  async_generators.rs  bigint.rs  bytecode.rs  class_closures.rs  class_constructors.rs  class_eval.rs  class_fields.rs  class_super.rs  classes.rs  closure_state.rs  compact_dispatch.rs  date.rs  date_format.rs  date_setters.rs  direct_leaf_trampoline.rs  disposable_stacks.rs  errors.rs  expressions.rs  functions.rs  generators.rs  global.rs  global_data_links.rs  iterator_helpers.rs  json.rs  maps.rs  math.rs  modules.rs  named_evaluation.rs  numbers.rs  numeric_loops.rs  objects.rs  parameters.rs  private_names.rs  promise_race.rs  promises.rs  proxy.rs  reflect.rs  regexp.rs  (+7 more)
crates/qjs-runtime/src/typed_array/: base64.rs  base64_tests.rs  construct.rs  element.rs  hex_tests.rs  indexed_tests.rs  iteration.rs  iteration_tests.rs  ordering.rs  ordering_tests.rs  tests.rs
crates/qjs-unicode/: Cargo.toml
crates/qjs-unicode/src/: lib.rs  tests.rs
(+1533 files in other folders)
