[package]
name = "qjs-cli"
version = "0.1.0"
description = "Command-line smoke-test wrapper for the quickjs-rust engine."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "qjs"
path = "src/main.rs"

[dependencies]
qjs-runtime = { path = "../qjs-runtime" }

[lints]
workspace = true
