[package]
name = "qjs-cli"
version = "0.1.0"
description = "Command-line shell for the quickjs-rust ECMAScript runtime."
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "qjs"
path = "src/main.rs"

[features]
# Forwards to `qjs-runtime/agents`: builds the CLI with the Test262 `$262.agent`
# multi-agent harness and cross-thread Atomics support. Off by default.
agents = ["qjs-runtime/agents"]

[dependencies]
qjs-runtime = { path = "../qjs-runtime" }

[lints]
workspace = true
