[package]
name = "qjs-parser"
version = "0.1.0"
description = "JavaScript parser that builds quickjs-rust AST nodes from lexer tokens."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
qjs-ast = { path = "../qjs-ast" }
qjs-lexer = { path = "../qjs-lexer" }

[lints]
workspace = true
