[package]
name = "qjs-runtime"
version = "0.1.0"
description = "JavaScript bytecode runtime and virtual machine for quickjs-rust."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Opt-in OS-thread support backing the Test262 `$262.agent` multi-agent harness
# plus cross-thread SharedArrayBuffer / real Atomics.wait/notify. The
# single-threaded core stays correct and unburdened with this feature off:
# every threaded code path is gated behind `#[cfg(feature = "agents")]`.
agents = []

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
qjs-ast = { path = "../qjs-ast" }
qjs-parser = { path = "../qjs-parser" }
qjs-unicode = { path = "../qjs-unicode" }
unicode-normalization = "0.1"

[lints]
workspace = true
