[package]
name = "qjs-runtime"
version = "0.1.0"
description = "Rust-native ECMAScript bytecode runtime and virtual machine."
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Opt-in OS-thread support backing the Test262 `$262.agent` multi-agent harness
# plus cross-thread SharedArrayBuffer / real Atomics.wait/notify. The
# single-threaded core stays correct and unburdened with this feature off:
# every threaded code path is gated behind `#[cfg(feature = "agents")]`.
# Pulls in `parking_lot` for a fair lock on shared memory: a JS `Atomics`
# busy-loop would otherwise starve a writer on another agent thread under the
# platform's non-fair `std::sync::Mutex`.
agents = ["dep:parking_lot"]

[dependencies]
# Randomly keyed, collision-resistant hashing for hot in-memory object-property
# tables. Property order remains explicit and does not depend on map iteration.
ahash = "0.8.12"
num-bigint = "0.4"
num-traits = "0.2"
parking_lot = { version = "0.12", optional = true }
qjs-ast = { path = "../qjs-ast" }
qjs-parser = { path = "../qjs-parser" }
qjs-unicode = { path = "../qjs-unicode" }
unicode-normalization = "0.1"

[dev-dependencies]
# Criterion 0.8.2 requires Rust 1.86, while this workspace supports Rust 1.85.
# Pin the last compatible line and keep only the libtest-compatible bench
# harness; charting, HTML, and Rayon are unnecessary for lifecycle diagnostics.
criterion = { version = "=0.7.0", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "lifecycle"
harness = false

[lints]
workspace = true
